<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:textSize="35sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:textSize="30sp"
        android:textColor="@color/white" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp"
            android:text="@string/clear_button"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp"
            android:text="@string/back_button"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/change_sign_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp"
            android:text="@string/change_sign_button"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/div_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp"
            android:text="@string/div_button"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/seven_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/seven_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/eight_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/eight_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/nine_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/nine_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/multi_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/multi_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/four_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/four_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/five_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/five_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/six_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/six_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/sub_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/sub_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/one_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/one_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/two_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/two_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/three_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/three_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/add_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/add_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/dot_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/dot_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/zero_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/zero_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:textSize="30sp"
            android:layout_margin="2dp"
            android:id="@+id/result_button"
            android:layout_width="144dp"
            android:layout_height="70dp"
            android:text="@string/result_button"
            android:drawablePadding="4dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>